@@ -19,9 +19,9 @@ describe PDFToImage do
       File.unlink('spec/tmp.jpg')
     end
 
-    it "should allow resizing" do
+    it "should allow resizing and quality control" do
       @pages = PDFToImage.open('spec/3pages.pdf')
-      @pages[0].resize('50%').save('spec/tmp2.jpg')
+      @pages[0].resize('50%').quality('80%').save('spec/tmp2.jpg')
       File.exists?('spec/tmp2.jpg').should equal true
       File.unlink('spec/tmp2.jpg')
     end
